# xxh

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: cargo.yml  integration.yml  nix.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
bootstrap/: bootstrap.sh
crates/xxh-cli/: Cargo.toml
crates/xxh-cli/src/: main.rs  target.rs
crates/xxh-cli/src/commands/: config.rs  connect.rs  mod.rs  plugin.rs
crates/xxh-cli/tests/: bootstrap_smoke.rs  cache_reuse.rs  connect_smoke.rs  container_clean.rs  container_errors.rs  container_parity.rs  container_smoke.rs  error_classes.rs  nix_plugin_alpine.rs  plugin_git_local.rs  zsh_package.rs
crates/xxh-cli/tests/common/: mod.rs
crates/xxh-config/: Cargo.toml
crates/xxh-config/src/: lib.rs  schema.rs
crates/xxh-core/: Cargo.toml
crates/xxh-core/src/: deploy.rs  lib.rs  platform.rs  session.rs  shellpkg.rs
crates/xxh-plugin-api/: Cargo.toml
crates/xxh-plugin-api/src/: lib.rs
crates/xxh-plugins/: Cargo.toml
crates/xxh-plugins/src/: isolation.rs  lib.rs  registry.rs  resolver.rs  source.rs
crates/xxh-plugins/src/sources/: git.rs  local.rs  mod.rs  nix.rs
crates/xxh-transport/: Cargo.toml
crates/xxh-transport/src/: container_backend.rs  lib.rs  russh_backend.rs  ssh_cli_backend.rs  tty.rs
nix/: config-schema.json
nix/modules/: common.nix  home-manager.nix  nixos.nix
specs/001-portable-shell-over-ssh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-portable-shell-over-ssh/checklists/: cli-config.md  declarative-nix-config.md  integration-testing.md  nix-devenv.md  nix-plugin-source.md  platform-delivery.md  plugins.md  requirements.md  security.md  transport.md
specs/001-portable-shell-over-ssh/contracts/: bootstrap-protocol.md  cli-commands.md  integration-testing.md  nix-config-module.md  nix-devenv.md  nix-provider.md  plugin-manifest.md  plugin-source-trait.md  transport-trait.md
specs/002-container-targets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-container-targets/checklists/: requirements.md  transport.md
specs/002-container-targets/contracts/: container-runtime-backend.md  dual-transport-testing.md  target-addressing.md  transport-trait-v2.md
tests/images/: README.md  alpine.Dockerfile  debian.Dockerfile  ubuntu.Dockerfile
tests/nix-modules/: eval_options.nix  roundtrip.nix
