[package]
name = "xxh-plugins"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# ⭐ Optional Nix static plugin provider (Принцип IX). Off by default; its absence
# must not affect the rest of the tool.
nix-source = []

[dependencies]
xxh-plugin-api.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
blake3.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true

[lints]
workspace = true
