[package]
name = "xxh-transport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
russh.workspace = true
russh-config.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
